--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,7 +21,7 @@
   },
   "imports": [],
   "projectView": {
-    "selectedView": "ftp"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -62,7 +62,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7880,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -83,7 +83,7 @@
   },
   "ftp-deploy": {
     "connectionType": "sftp",
-    "remotePath": "applications/wtqbguzcpz/public_html/wp-content/plugins/next",
+    "remotePath": "applications/gunfighter/public_html/wp-content/plugins/next",
     "uploadTimeout": 20000,
     "uploadOnChange": true,
     "ftp": {
@@ -131,27 +131,45 @@
     "history": [
       {
         "file": "LICENSE",
-        "ctime": "2017-04-26T20:36:16.116Z",
-        "mtime": "2017-04-26T20:36:16.116Z",
+        "ctime": "2017-08-16T15:16:31.758Z",
+        "mtime": "2017-08-16T15:16:31.758Z",
         "size": 35815
       },
       {
         "file": "next.php",
-        "ctime": "2017-04-26T20:46:39.729Z",
-        "mtime": "2017-04-26T20:46:39.729Z",
+        "ctime": "2017-08-20T17:19:04.592Z",
+        "mtime": "2017-08-20T17:19:04.592Z",
         "size": 1517
       },
       {
         "file": "README.md",
-        "ctime": "2017-04-26T20:36:16.119Z",
-        "mtime": "2017-04-26T20:36:16.119Z",
+        "ctime": "2017-08-16T15:16:31.764Z",
+        "mtime": "2017-08-16T15:16:31.764Z",
         "size": 32
       },
       {
         "file": "assets/style.css",
-        "ctime": "2017-04-26T22:10:22.836Z",
-        "mtime": "2017-04-26T22:10:22.836Z",
-        "size": 1199
+        "ctime": "2017-08-16T22:30:05.952Z",
+        "mtime": "2017-08-16T22:30:05.952Z",
+        "size": 7613
+      },
+      {
+        "file": "assets/images/photos.svg",
+        "ctime": "2017-08-16T17:21:59.056Z",
+        "mtime": "2017-08-16T17:21:59.056Z",
+        "size": 2255
+      },
+      {
+        "file": "assets/images/photos.afdesign",
+        "ctime": "2017-08-16T17:19:23.877Z",
+        "mtime": "2017-08-16T17:19:23.877Z",
+        "size": 18422
+      },
+      {
+        "file": "assets/images/desktop.svg",
+        "ctime": "2017-08-16T21:12:05.109Z",
+        "mtime": "2017-08-16T21:12:05.109Z",
+        "size": 1666
       }
     ]
   },
